[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Bergutov Ruslan <ruslanbergutov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
line-profiler-pycharm = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

